fix button not showing up

--- a/src/globals.css
+++ b/src/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+button, [type='button'], [type='reset'], [type='submit'] {
+  background-color: black;
+  color: white /* Change transparent to inherit or desired color */
+}
+
+
 /* FIXME: find a way to reset styles of leaflet in components */
 .leaflet-marker-icon.leaflet-div-icon {
   background: none;
